--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Wordle Georgia</h1>
+    <h1>სიტყვობანა</h1>
     <div id="game-board"></div>
     <input type="text" id="guess-input" maxlength="5">
     <button onclick="submitGuess()">Guess</button>
