--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1>სიტყვობანა</h1>
     <div id="game-board"></div>
-    <input type="text" id="guess-input" maxlength="5">
+    <div id="guess-section">
+    <input type="text" id="guess-input" maxlength="5" placeholder="Enter your guess" />
     <button onclick="submitGuess()">Guess</button>
+  </div>
     <script src="script.js"></script>
 </body>
 </html>
