--- a/index.html
+++ b/index.html
@@ -6,13 +6,30 @@
     <title>სიტყვობანა</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>სიტყვობანა</h1>
-    <div id="game-board"></div>
-    <div id="guess-section">
-    <input type="text" id="guess-input" maxlength="5" placeholder="Enter your guess" />
-    <button onclick="submitGuess()">Guess</button>
-  </div>
+    <div id="main-container">
+        <!-- Game Section -->
+        <div id="game-container">
+            <h1>სიტყვობანა</h1>
+            <div id="game-board"></div>
+            <div id="guess-section">
+                <input type="text" id="guess-input" maxlength="5" placeholder="Enter your guess" />
+                <button onclick="submitGuess()">Guess</button>
+            </div>
+        </div>
+
+        <!-- Profile Section -->
+        <div id="profile-section">
+            <h2>Პროფილი</h2>
+            <input type="text" id="username" placeholder="მომხმარებლის სახელი" />
+            <input type="email" id="email" placeholder="ელ-ფოსტა" />
+            <input type="password" id="password" placeholder="პაროლი" />
+            <button onclick="signUp()">Რეგისტრაცია</button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
+    
 </html>
