--- a/index.html
+++ b/index.html
@@ -6,36 +6,41 @@
     <title>სიტყვობანა</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <div id="main-container">
-    <div id="game-container">
-        <h1>სიტყვობანა</h1>
-        <div id="game-board"></div>
-        <div id="guess-section">
-            <input type="text" id="guess-input" maxlength="5" placeholder="Enter your guess" />
-            <button onclick="submitGuess()">Guess</button>
+        <!-- Game Section -->
+        <div id="game-container">
+            <h1>სიტყვობანა</h1>
+            <div id="game-board"></div>
+            <div id="guess-section">
+                <input type="text" id="guess-input" maxlength="5" placeholder="Enter your guess" />
+                <button onclick="submitGuess()">Guess</button>
+            </div>
+        </div>
+
+        <!-- Auth Section -->
+        <div id="auth-section">
+            <h2 id="auth-title">Login</h2>
+            <form id="auth-form" onsubmit="return handleAuth(event)">
+                <input type="text" id="auth-username" placeholder="Username" required />
+                <input type="email" id="auth-email" placeholder="Email" required />
+                <input type="password" id="auth-password" placeholder="Password (min 8 chars)" minlength="8" required />
+                <button type="submit" id="auth-button">Login</button>
+            </form>
+            <p id="auth-toggle-text">
+                Don't have an account?
+                <a href="#" onclick="toggleAuthMode()">Sign up</a>
+            </p>
         </div>
     </div>
 
-    <div id="profile-section">
-        <h2>Რეგისტრაცია</h2>
-        <form id="signup-form" onsubmit="return handleSignUp(event)">
-            <input type="text" id="username" name="username" placeholder="Username" required />
-            <input type="email" id="email" name="email" placeholder="Email" required />
-            <input type="email" id="confirm-email" placeholder="Confirm Email" required />
-            <input type="password" id="password" name="password" placeholder="Password (min 8 chars)" required minlength="8" />
-            <button type="submit">Sign up</button>
-        </form>
-    </div>
-</div>
-<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-<script>
-  (function() {
-    emailjs.init("0DQhckPr17kgSEFbJ"); // Replace with your actual public key from EmailJS
-  })();
-</script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+      (function() {
+        emailjs.init("0DQhckPr17kgSEFbJ");
+      })();
+    </script>
     <script src="script.js"></script>
 </body>
-    
 </html>
+
