--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <div id="main-container">
+        <div id="logout-section" style="display:none; text-align:center; margin-bottom: 20px;">
+    <p>Welcome, <strong id="current-user"></strong>!</p>
+    <button onclick="logout()">Logout</button>
+           </div>
+
   <div id="game-container">
     <h1>სიტყვობანა</h1>
     <div id="game-board"></div>
